# rail-django

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  UPGRADE_PLAN.md  abac frnech.md  abac.md  audit_plan.md  claude_perms_review.md  context7_plan.md  django_channels_graphql_ws_report.json  export.xlsx  filtering_plan.md  fix_schema_casing.py  graphql_ws_report.json  guide.md  migration.md  mutation_plan.md  nestedplan.md  newcontext_review.md  output_test.txt  paid_orders.xlsx  plan.md  plan_mutations.md  plan_queries.md  profile_script.py  pyproject.toml  pytest.ini  rail-django-builder.skill  reccomndation.md  refactor.md  requirements.txt  review_plan.md  setup.py  test_result.txt  tests_report.md  (+1 more)
.claude/: settings.local.json
.claude/agents/: documentation-specialist.md
.github/workflows/: ci.yml  package-build.yml  tag-release.yml
docs/: 10_extra_features.md  5_features.md  README.md  architecture.md  cli.md  configuration.md  extensions.md  graphql.md  index.md  metadata_v2.md  migration.md  modules.md  reporting.md  rest-api.md  security.md  subscriptions.md  testing.md  webhooks.md
docs/contributing/: modules.md  testing.md
docs/core/: configuration.md  filtering.md  models-and-schema.md  mutations.md  performance.md  queries.md
docs/extensions/: audit-logging.md  audit.md  auth.md  exporting.md  health-checks.md  health.md  index.md  metadata.md  mfa.md  multitenancy.md  observability.md  optimization.md  performance-metrics.md  permissions.md  persisted-queries.md  rate-limiting.md  reporting.md  subscriptions.md  tasks.md  templating.md  virus-scanner.md  webhooks.md
docs/getting-started/: cli.md  index.md  installation.md  quickstart.md
docs/guides/: filtering.md  graphql.md  index.md  queries.md  reporting.md  rest-api.md  subscriptions.md  testing.md  troubleshooting.md  webhooks.md
docs/operations/: deployment.md  index.md
docs/reference/: api.md  cli.md  configuration.md  (+2 more)
examples/: __init__.py  basic_usage.py
graphify-out/: .graphify_detect.json  .graphify_python
rail_django/: __init__.py  admin.py  apps.py  audit_urls.py  config_proxy.py  decorators.py  defaults.py  health_urls.py  models.py  rate_limiting.py  saved_filter.py  schema.py  security_config.py  settings.py  urls.py
scripts/: verify_audit_migration.py
test_app/: models.py
tests/: __init__.py  models.py  test_control_center.py  test_csrf_endpoint.py  test_health_system.py
tutorials/: 01_getting_started.md  02_models_and_schema.md  03_queries_and_filtering.md  04_mutations.md  05_security_and_permissions.md  06_advanced.md  README.md  filtering_and_settings.md
(+1258 files in other folders)
