[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rail_django.conf.test_settings"
django_find_project = false
pythonpath = ["."]
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"
select = ["F"]
ignore = ["F401"]
